# ACM-OpenWebUI-plugins

./: anthropic_prompt_caching.py  enable_reasoning.py  newapi_provider.py  openrouter_provider.py  pyproject.toml
